--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ jmeMainVersion = 3.1
 jmeVersionTag = snapshot-github
 
 # specify if JavaDoc should be built
-buildJavaDoc = true
+buildJavaDoc = false
 
 # specify if SDK and Native libraries get built
 buildSdkProject = true
