Gradle: dont build android examples by default

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,7 +34,10 @@ include 'jme3-testdata'
 
 // Example projects
 include 'jme3-examples'
-include 'jme3-android-examples'
+
+if(buildAndroidExamples == "true"){
+	include 'jme3-android-examples'
+}
 
 if(buildSdkProject == "true"){
     include 'sdk'
