--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ buildJavaDoc = true
 # specify if SDK and Native libraries get built
 buildSdkProject = true
 buildNativeProjects = false
+buildAndroidExamples = false
 
 # Path to android NDK for building native libraries
 #ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
