Added a graddle.properties to je jme-examples project with an override of buildJavaDoc to false, to not generate the javadoc when building from jme-examples Also added a parameter to enable assertion as executable classes are only in this project anyway. Removed the global assertion setting as it's only needed in jme-examples.

--- a/build.gradle
+++ b/build.gradle
@@ -175,11 +175,11 @@ ext {
 //    }
 //}
 
-allprojects {
-    tasks.withType(JavaExec) {
-        enableAssertions = true // false by default
-    }
-    tasks.withType(Test) {
-        enableAssertions = true // true by default
-    }
-}
+//allprojects {
+//    tasks.withType(JavaExec) {
+//        enableAssertions = true // false by default
+//    }
+//    tasks.withType(Test) {
+//        enableAssertions = true // true by default
+//    }
+//}
