Added intellij files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.gradle/
 /.nb-gradle/private/
 /.nb-gradle/profiles/private/
+/.idea/
 /dist/
 /build/
 /netbeans/
@@ -124,6 +125,7 @@
 *.so
 *.jnilib
 *.dylib
+*.iml
 /sdk/dist/
 !/jme3-bullet-native/libs/native/windows/x86_64/bulletjme.dll
 !/jme3-bullet-native/libs/native/windows/x86/bulletjme.dll
