Changed build scripts slightly for bullet to not reference src outside it's own base dir. This was mainly done to be able to import the project correctly in IntelliJ IDEA. The modules will now instead reference each other through the dependency mechanism.

--- a/jme3-bullet-native-android/build.gradle
+++ b/jme3-bullet-native-android/build.gradle
@@ -21,6 +21,7 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
+    compile project(':jme3-bullet-native')
     compile project(':jme3-bullet')
 }
 
@@ -28,7 +29,6 @@ dependencies {
 sourceSets {
     main {
         java {
-            srcDir jmeCppPath
             srcDir jmeAndroidPath
         }
     }
