Reverted changes to build script regarding bullet libs.

--- a/jme3-bullet-native-android/build.gradle
+++ b/jme3-bullet-native-android/build.gradle
@@ -21,7 +21,7 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-    compile project(':jme3-bullet-native')
+//    compile project(':jme3-bullet-native')
     compile project(':jme3-bullet')
 }
 
@@ -29,6 +29,7 @@ dependencies {
 sourceSets {
     main {
         java {
+            srcDir jmeCppPath
             srcDir jmeAndroidPath
         }
     }
