sdk build: use "nbm revision" to allow upgrades between tagged releases

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ jmeVersion = 3.1.0
 jmeMainVersion = 3.1
 # Version addition pre-alpha-svn, Stable, Beta
 jmeVersionTag = SNAPSHOT
+# Increment this each time jmeVersionTag changes but jmeVersion stays the same
+jmeVersionTagID = 0
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
