--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@
 /sdk/BasicGameTemplate/nbproject/private/
 /sdk/nbi/stub/ext/components/products/jdk/build/
 /sdk/nbi/stub/ext/components/products/jdk/dist/
+/sdk/jme3-dark-laf/nbproject/private/
