--- a/build.gradle
+++ b/build.gradle
@@ -59,15 +59,14 @@ task libDist(dependsOn: subprojects.build) << {
     }
 }
 
-task createZipDistribution(type:Zip,dependsOn:["dist","libDist"], description:"Package the nightly zip distribution"){    
-        archiveName "jME"+jmeVersion+"_"+jmeVersionTag+"_"+new Date().format("yyyy-MM-dd")+".zip"
-       
-        into("/") {
-             from {"./dist"}
-        }            
-        into("/sources") {
-            from {"$buildDir/libDist/sources"}     
-        }
+task createZipDistribution(type:Zip,dependsOn:["dist","libDist"], description:"Package the nightly zip distribution"){
+    archiveName "jME" + jmeFullVersion + ".zip"
+    into("/") {
+         from {"./dist"}
+    }            
+    into("/sources") {
+        from {"$buildDir/libDist/sources"}     
+    }
 }
 
 task copyLibs(type: Copy){
