build: upload on bintray from travis when a git tag is set and it starts by jmeMainVersion

--- a/version.gradle
+++ b/version.gradle
@@ -76,7 +76,11 @@ task configureVersionInfo {
         jmeFullVersion = jmeMainVersion
         jmePomVersion  = jmeVersion
         
-        if (jmeBranchName != "master") {
+        if (jmeGitTag.startsWith(jmeMainVersion)) {
+            jmeVersionTag = ""
+            jmePomVersion = jmeGitTag
+        }
+        if (jmeBranchName != "master" && jmeVersionTag == "SNAPSHOT") {
             jmeFullVersion += "-${jmeBranchName}"
             jmePomVersion  += "-${jmeBranchName}"
             
