--- a/bintray.gradle
+++ b/bintray.gradle
@@ -8,6 +8,7 @@ bintray {
     user = bintray_user
     key = bintray_api_key
     configurations = ['archives']
+    dryRun = false 
     pkg {
         repo = 'org.jmonkeyengine'
         userOrg = 'jmonkeyengine'
@@ -15,10 +16,12 @@ bintray {
         desc = POM_DESCRIPTION
         websiteUrl = POM_URL
         licenses = ['BSD New']
-        vcsUrl = POM_SCM_CONNECTION
+        vcsUrl = POM_SCM_URL
         labels = ['jmonkeyengine']
     }
 }
+
+bintrayUpload.dependsOn(writeFullPom)
 
 bintrayUpload.onlyIf {
     (bintray_api_key.length() > 0) &&
