Modified the run task to pass through the log configurion settings system property.

--- a/jme3-examples/build.gradle
+++ b/jme3-examples/build.gradle
@@ -11,6 +11,9 @@ task run(dependsOn: 'build', type:JavaExec) {
         jvmArgs "-XstartOnFirstThread"
         jvmArgs "-Djava.awt.headless=true"
     }
+
+    systemProperty "java.util.logging.config.file", System.getProperty("java.util.logging.config.file")
+
     if( assertions  == "true" ){
         enableAssertions = true;
     }
