unit test: more descriptive failure message

--- a/common.gradle
+++ b/common.gradle
@@ -51,6 +51,12 @@ javadoc {
     }
 }
 
+test {
+    testLogging {
+        exceptionFormat = 'full'
+    }
+}
+
 task sourcesJar(type: Jar, dependsOn: classes, description: 'Creates a jar from the source files.') {
     classifier = 'sources'
     from sourceSets*.allSource
